force-app/main/default/objects/ssot__BenefitItemCode__dlm/fields/ssot__ReferenceItemCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceItemCodeId__c</fullName>
    <label>Reference Item Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceItemCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>