force-app/main/default/objects/ssot__BenefitItemCode__dlm/fields/ssot__ReferenceItemCodeObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferenceItemCodeObject__c</fullName>
    <label>Reference Item Code Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferenceItemCodeObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>