force-app/main/default/objects/ssot__BenefitItemCode__dlm/fields/ssot__rel_1729227409852_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227409852_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitItemCode_ReferenceItemCodeId__rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>BenefitItemCode_ReferenceItemCodeId__rel</relationshipLabel>
    <relationshipName>rel_1729227409852_end</relationshipName>
    <type>Lookup</type>
</CustomField>